derive/tests/ui/bounds_checks_mode.rs
use indexland::Idx;

fn main() {
    #[derive(Idx)]
    #[indexland(bounds_checks = "off")]
    struct Foo(u32);
}
